@@ -1,3 +1,8 @@
+2005-01-26  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/unix/sysv/linux/kernel-features.h: Found reference to
+	MSG_NOSIGNAL being in 2.2 kernels.
+
 2005-01-26  Jakub Jelinek  <jakub@redhat.com>
 
 	* sysdeps/unix/sysv/linux/i386/sysdep.h
